Analysis of Probabilistic Splay Trees